assets/css/components/navigation.scss
#nav-sidebar {
  display: flex;
  flex-direction: column;
  position: relative;
  width: $sidebar-width-expanded;
  overflow: hidden;

  height: 100vh;

  transition: 0.5s;

  background: linear-gradient($header-bg-color, $header-bg-color-secondary);

  ul {
    padding-left: 0;
  }

  #nav-sidebar-controls {
    display: flex;
    flex-direction: column;
    position: absolute;
    width: 100%;
    top: 10px;

    #openbtn, #closebtn {
      margin: 10px;
      width: 50px;
    }

    #openbtn {
      display: none;
    }

    #closebtn {
      display: flex;
      justify-content: center;
    }
  }

  #nav-sidebar-menu {
    display: flex;
    flex-direction: column;
    justify-content: center;

    margin: auto 20px;
    height: 100%;
    overflow-x: hidden;

    @media screen and (max-height: 450px) {
      padding-top: 15px;

      a {
        font-size: 18px;
      }
    }

    .nav-title {
      display: flex;
      align-items: center;

      a {
        color: white;
        width: 100%;
        padding: 20px 10px 20px;
        display: inline-block;
        text-decoration: none;

        &:hover, &.active {
          background: rgba(255, 255, 255, 0.197);
        }
      }
    }
  }

  #nav-sidebar-social-links {
    display: flex;
    position: absolute;
    bottom: 25px;

    width: 100%;
    justify-content: start;
    align-items: center;

    #nav-sidebar-social-links-container {
      display: flex;
      width: 65%;
      justify-content: end;
      background-color: white;

      #github-link, #linkedin-link {
        display: flex;
        margin: 5px;
        width: 40px;
      }
    }
  }

  @media screen and (max-width: 800px) {
    width: $sidebar-width-collapsed;

    #nav-sidebar-controls {
      #openbtn {
        display: block;
      }

      #closebtn {
        display: none;
      }
    }

    #nav-sidebar-menu {
      display: none;
    }

    #nav-sidebar-social-links {
      display: none;
    }
  }
}

